// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`denormalize denormalizes arrays with objects inside 1`] = `
Array [
  Object {
    "data": Tacos {
      "id": "1",
      "type": "foo",
    },
  },
  Object {
    "data": undefined,
  },
]
`;

exports[`denormalize denormalizes entities 1`] = `
Array [
  Tacos {
    "id": "1",
    "type": "foo",
  },
  Tacos {
    "id": "2",
    "type": "bar",
  },
]
`;

exports[`denormalize denormalizes ignoring deleted entities in arrays 1`] = `
Array [
  Array [
    Tacos {
      "id": "1",
      "type": "foo",
    },
  ],
  true,
  false,
]
`;

exports[`denormalize denormalizes ignoring deleted entities in arrays 2`] = `
Array [
  Object {
    "results": Array [
      Tacos {
        "id": "1",
        "type": "foo",
      },
    ],
  },
  true,
  false,
]
`;

exports[`denormalize denormalizes ignoring unfound entities in arrays 1`] = `
Array [
  Array [
    Tacos {
      "id": "1",
      "type": "foo",
    },
  ],
  true,
  false,
]
`;

exports[`denormalize denormalizes ignoring unfound entities in arrays 2`] = `
Array [
  Object {
    "results": Array [
      Tacos {
        "id": "1",
        "type": "foo",
      },
    ],
  },
  true,
  false,
]
`;

exports[`denormalize denormalizes nested entities 1`] = `
Array [
  Article {
    "author": User {
      "id": "8472",
      "name": "Paul",
    },
    "body": "This article is great.",
    "comments": Array [
      Comment {
        "comment": "I like it!",
        "id": "comment-123-4738",
        "user": User {
          "id": "10293",
          "name": "Jane",
        },
      },
    ],
    "id": "123",
    "title": "A Great Article",
  },
  true,
  false,
]
`;

exports[`denormalize denormalizes schema with extra members 1`] = `
Array [
  Object {
    "data": Array [
      Tacos {
        "id": "1",
        "type": "foo",
      },
      Tacos {
        "id": "2",
        "type": "bar",
      },
    ],
    "extra": "5",
    "page": Object {
      "complex": Object {
        "complex": false,
        "next": true,
      },
      "first": null,
      "second": Object {
        "thing": "two",
      },
      "third": 1,
    },
  },
  true,
  false,
]
`;

exports[`denormalize denormalizes schema with extra members but not set 1`] = `
Array [
  Object {
    "data": Array [
      Tacos {
        "id": "1",
        "type": "foo",
      },
      Tacos {
        "id": "2",
        "type": "bar",
      },
    ],
  },
  true,
  false,
]
`;

exports[`denormalize denormalizes with function as pk() 1`] = `
Array [
  Array [
    Patron {
      "guest": null,
      "id": "1",
      "name": "Esther",
    },
    Patron {
      "guest": Guest {
        "guestId": 1,
      },
      "id": "2",
      "name": "Tom",
    },
  ],
  true,
  false,
]
`;

exports[`denormalize denormalizes without entities fills undefined 1`] = `
Array [
  Object {
    "data": undefined,
  },
  false,
  false,
]
`;

exports[`denormalize denormalizes without entities fills undefined 2`] = `
Array [
  Immutable.Map {
    "data": undefined,
  },
  false,
  false,
]
`;

exports[`denormalize set to undefined if schema key is not in entities 1`] = `
Array [
  Article {
    "author": undefined,
    "body": "",
    "comments": Array [
      Comment {
        "comment": "",
        "id": "1",
        "user": undefined,
      },
    ],
    "id": "123",
    "title": "",
  },
  true,
  false,
]
`;

exports[`denormalize throws when nested entities are primitives 1`] = `
"Unexpected primitive found during denormalization
Found: 4
Expected entity: class Comment extends _IDEntity.default {
      constructor(...args) {
        super(...args);
        this.comment = '';
      }

    }"
`;

exports[`normalize can use fully custom entity classes 1`] = `
Object {
  "entities": Object {
    "Children": Object {
      "4": Children {
        "id": 4,
        "name": "lettuce",
      },
    },
    "Food": Object {
      "1234": Object {
        "children": Array [
          "4",
        ],
        "name": "tacos",
        "uuid": "1234",
      },
    },
  },
  "indexes": Object {},
  "result": Object {
    "schema": "Food",
    "uuid": "1234",
  },
}
`;

exports[`normalize ignores null values 1`] = `
Object {
  "entities": Object {},
  "indexes": Object {},
  "result": Array [
    null,
  ],
}
`;

exports[`normalize ignores null values 2`] = `
Object {
  "entities": Object {},
  "indexes": Object {},
  "result": Array [
    undefined,
  ],
}
`;

exports[`normalize ignores null values 3`] = `
Object {
  "entities": Object {},
  "indexes": Object {},
  "result": Array [
    false,
  ],
}
`;

exports[`normalize normalizes entities 1`] = `
Object {
  "entities": Object {
    "Tacos": Object {
      "1": Tacos {
        "id": "1",
        "type": "foo",
      },
      "2": Tacos {
        "id": "2",
        "type": "bar",
      },
    },
  },
  "indexes": Object {},
  "result": Array [
    "1",
    "2",
  ],
}
`;

exports[`normalize normalizes entities with circular references 1`] = `
Object {
  "entities": Object {
    "User": Object {
      "123": User {
        "friends": Array [
          "123",
        ],
        "id": "123",
      },
    },
  },
  "indexes": Object {},
  "result": "123",
}
`;

exports[`normalize normalizes nested entities 1`] = `
Object {
  "entities": Object {
    "Article": Object {
      "123": Article {
        "author": "8472",
        "body": "This article is great.",
        "comments": Array [
          "comment-123-4738",
        ],
        "id": "123",
        "title": "A Great Article",
      },
    },
    "Comment": Object {
      "comment-123-4738": Comment {
        "comment": "I like it!",
        "id": "comment-123-4738",
        "user": "10293",
      },
    },
    "User": Object {
      "10293": User {
        "id": "10293",
        "name": "Jane",
      },
      "8472": User {
        "id": "8472",
        "name": "Paul",
      },
    },
  },
  "indexes": Object {},
  "result": "123",
}
`;

exports[`normalize normalizes schema with extra members 1`] = `
Object {
  "entities": Object {
    "Tacos": Object {
      "1": Tacos {
        "id": "1",
        "type": "foo",
      },
      "2": Tacos {
        "id": "2",
        "type": "bar",
      },
    },
  },
  "indexes": Object {},
  "result": Object {
    "data": Array [
      "1",
      "2",
    ],
    "extra": "five",
    "page": Object {
      "complex": Object {
        "complex": false,
        "next": true,
      },
      "second": Object {
        "thing": "two",
      },
      "third": 1,
    },
  },
}
`;

exports[`normalize normalizes schema with extra members but not set 1`] = `
Object {
  "entities": Object {
    "Tacos": Object {
      "1": Tacos {
        "id": "1",
        "type": "foo",
      },
      "2": Tacos {
        "id": "2",
        "type": "bar",
      },
    },
  },
  "indexes": Object {},
  "result": Object {
    "data": Array [
      "1",
      "2",
    ],
  },
}
`;

exports[`normalize normalizes schema with indexes 1`] = `
Object {
  "entities": Object {
    "MyTaco": Object {
      "1": MyTaco {
        "id": "1",
        "type": "foo",
      },
      "2": MyTaco {
        "id": "2",
        "type": "bar2",
      },
    },
  },
  "indexes": Object {
    "MyTaco": Object {
      "type": Object {
        "bar2": "2",
        "foo": "1",
      },
    },
  },
  "result": Object {
    "alt": "2",
    "data": Array [
      "1",
      "2",
    ],
  },
}
`;

exports[`normalize normalizes warns on schemas with unfound indexes 1`] = `
Object {
  "entities": Object {
    "MyTaco": Object {
      "1": MyTaco {
        "id": "1",
        "type": "foo",
      },
      "2": MyTaco {
        "id": "2",
        "type": "bar2",
      },
    },
  },
  "indexes": Object {
    "MyTaco": Object {
      "notfound": Object {},
    },
  },
  "result": Object {
    "alt": "2",
    "data": Array [
      "1",
      "2",
    ],
  },
}
`;

exports[`normalize passes over pre-normalized values 1`] = `
Object {
  "entities": Object {
    "Article": Object {
      "123": Article {
        "author": "1",
        "id": "123",
        "title": "normalizr is great!",
      },
    },
  },
  "indexes": Object {},
  "result": "123",
}
`;

exports[`normalize passes over pre-normalized values 2`] = `
Object {
  "entities": Object {},
  "indexes": Object {},
  "result": Object {
    "user": "1",
  },
}
`;

exports[`normalize uses the non-normalized input when getting the ID for an entity 1`] = `
Object {
  "entities": Object {
    "Recommendations": Object {
      "456": Recommendations {
        "user": "456",
      },
    },
    "User": Object {
      "456": User {
        "id": "456",
      },
    },
  },
  "indexes": Object {},
  "result": "456",
}
`;

exports[`normalize uses the non-normalized input when getting the ID for an entity 2`] = `
Array [
  Array [
    Recommendations {
      "user": "456",
    },
    Object {
      "user": Object {
        "id": "456",
      },
    },
    undefined,
  ],
]
`;
